--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="loading_scores">Loading scores…</string>
     <string name="schools">Schools</string>
     <string name="average_scores">Average SAT Scores</string>
-    <string name="sat_reading">Reading</string>
-    <string name="sat_writing">Writing</string>
-    <string name="sat_math">Math</string>
+    <string name="sat_reading">Reading:</string>
+    <string name="sat_writing">Writing:</string>
+    <string name="sat_math">Math:</string>
     <string name="network_error">Oops… network issue.\nPlease, make sure your internet is on.</string>
     <string name="service_error">Oops… something went wrong… sorry.</string>
 </resources>
