--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sat_math">Math:</string>
     <string name="network_error">Oops… network issue.\nPlease, make sure your internet is on.</string>
     <string name="service_error">Oops… something went wrong… sorry.</string>
+    <string name="scores_not_found_error">Sorry, the SAT scores could not be found.</string>
 </resources>
